<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swipe_tab3"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

            <ListView
                android:id="@+id/listviewprodutos"
                android:layout_marginTop="80dp"
                android:paddingTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:listSelector="@android:color/transparent"
                android:cacheColorHint="@android:color/transparent"
                android:divider="@null"
                android:dividerHeight="6dp" />

    </android.support.v4.widget.SwipeRefreshLayout>
